# AntsProject

./: .gitignore  CMakeLists.txt  CMakeSettings.json  main.cpp
ANN/: CMakeLists.txt
ANN/include/: ANN.hpp
ANN/include/ANN/: Core.hpp  NeuralNetworkBuilders.hpp  NeuralNetworks.hpp  Neurons.hpp
ANN/include/ANN/Core/: Neuron.hpp  ProcessingNeuron.hpp  Receptor.hpp  StatelessNeuralNetwork.hpp  Synapse.hpp  TrainingSet.hpp  ValuesArray.hpp
ANN/include/ANN/NetworkBuilders/: LayeredNeuralNetworkBuilder.hpp
ANN/include/ANN/NeuralNetworks/: LayeredNeuralNetwork.hpp
ANN/include/ANN/Neurons/: ReLuNeuron.hpp  SigmoidNeuron.hpp
ANN/src/Core/: Neuron.cpp  ProcessingNeuron.cpp  Receptor.cpp  Synapse.cpp  TrainingSet.cpp  ValuesArray.cpp
ANN/src/NetworkBuilders/: LayeredNeuralNetworkBuilder.cpp
ANN/src/NeuralNetworks/: LayeredNeuralNetwork.cpp
ANN/src/Neurons/: ReLuNeuron.cpp  SigmoidNeuron.cpp
AntsLib/: CMakeLists.txt
AntsLib/include/: AntsLib.hpp
AntsLib/include/AntsLib/BoardEntities/: Ant.hpp  AntHill.hpp
AntsLib/include/AntsLib/BoardEntities/Ant/: AntQBrain.hpp  AntState.hpp
AntsLib/include/AntsLib/Core/: Environment.hpp  Settings.hpp  Simulation.hpp
AntsLib/include/AntsLib/Core/Board/: Board.hpp
AntsLib/include/AntsLib/Core/Board/BoardState/: BoardEntity.hpp  BoardEntityType.hpp  GroundContent.hpp  Tile.hpp
AntsLib/include/AntsLib/Environments/: SingleColonyEnvironment.hpp
AntsLib/include/AntsLib/Stats/: Stats.hpp
AntsLib/include/AntsLib/Visualization/: TextureLoader.hpp  VisualizationParams.hpp
AntsLib/src/BoardEntities/: Ant.cpp  AntHill.cpp
AntsLib/src/BoardEntities/Ant/: AntQBrain.cpp  AntState.cpp
AntsLib/src/Core/: Settings.cpp  Simulation.cpp
AntsLib/src/Core/Board/: Board.cpp
AntsLib/src/Core/Board/BoardState/: GroundContent.cpp  Tile.cpp
AntsLib/src/Environments/: SingleColonyEnvironment.cpp
AntsLib/src/Stats/: Stats.cpp
AntsLib/src/Visualization/: TextureLoader.cpp  VisualizationParams.cpp
Utils/: CMakeLists.txt
Utils/include/: Utils.hpp
Utils/include/Utils/: Calculators.hpp  Generators.hpp  Types.hpp
Utils/include/Utils/Calculators/: GeometryCalculator.hpp  RangeCalculator.hpp
Utils/include/Utils/Generators/: RandomGenerator.hpp
Utils/include/Utils/Types/: CircularBuffer.hpp  Vector2f.hpp  Vector2i.hpp
Utils/src/Calculators/: GeometryCalculator.cpp  RangeCalculator.cpp
Utils/src/Generators/: RandomGenerator.cpp
Utils/src/Types/: Vector2f.cpp  Vector2i.cpp
